fix: adjust mobile legend text to be aligned

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,8 @@ body {
 .count legend {
   font-size: 1.2rem;
   margin-top: 0.5rem;
+	margin: auto;
+  text-align: center;
 }
 
 .footer-container p {
@@ -180,6 +182,8 @@ body {
 @media (max-width: 768px) {
   .count {
     grid-template-columns: repeat(2, 1fr);
+		gap: 0.5rem;
+    max-width: 100%;
   }
 
   .countdown header h1 {
